[package]
name = "lunna_actix_utils"
version = "1.0.0"
edition = "2024"
description = """
This crate is intended to be a collection of utils for my projects that uses actix as web "framework"
"""
authors = ["Lunna <contact@lunna.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Lunna5/lunna-actix-utils"
repository = "https://github.com/Lunna5/lunna-actix-utils.git"

[dependencies]
validator = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
serde_json = "1.0.140"
argon2 = "0.5.3"
thiserror = "2.0.12"
jsonwebtoken = "9.3.1"

[lib]
name = "luna_actix_utils"
test = false
doctest = true
bench = true
doc = true
proc-macro = false
crate-type = ["lib"]
required-features = []
