[package]
name = "lunna_actix_utils"
version = "1.0.0"
edition = "2024"
description = """
This crate is intended to be a collection of utils for my projects that uses actix as web "framework"
"""
authors = ["Lunna <contact@lunna.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Lunna5/lunna-actix-utils"
repository = "https://github.com/Lunna5/lunna-actix-utils.git"

[dependencies]
validator.workspace = true
tokio.workspace = true
actix-web.workspace = true
serde.workspace = true
strum.workspace = true
serde_json.workspace = true
argon2.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true

[lib]
name = "lunna_actix_utils"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
crate-type = ["lib"]
required-features = []

[workspace]
members = [".", "test-server"]

[workspace.dependencies]
validator = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
serde_json = "1.0.140"
argon2 = "0.5.3"
thiserror = "2.0.12"
jsonwebtoken = "9.3.1"
tokio-macros = "2.5.0"
